[gd_scene load_steps=17 format=3 uid="uid://cu58tpewaxoyb"]

[ext_resource type="Script" path="res://types/dealer.gd" id="1_4jtvl"]
[ext_resource type="Script" path="res://test/card_stack_ui/TestCardStackUI.gd" id="1_nmuyj"]
[ext_resource type="Script" path="res://types/empty_spot.gd" id="2_yifio"]
[ext_resource type="Script" path="res://types/full_card_stack_ui.gd" id="3_xugq4"]
[ext_resource type="Script" path="res://types/clickable.gd" id="4_klxqk"]
[ext_resource type="Shape2D" uid="uid://b53kt7hfoptw0" path="res://resources/standard_collision_rectangle.tres" id="5_7tjoe"]
[ext_resource type="Script" path="res://types/card_counter.gd" id="6_mtdof"]
[ext_resource type="Script" path="res://test/card_stack_ui/EndPile.gd" id="7_l8xok"]
[ext_resource type="Script" path="res://types/card_stack_ui.gd" id="8_ep2f1"]
[ext_resource type="PackedScene" uid="uid://dmrefjqqgcpol" path="res://scenes/build_pile.tscn" id="9_ovmvl"]
[ext_resource type="Script" path="res://test/card_stack_ui/SinkPile.gd" id="10_daqt6"]
[ext_resource type="Script" path="res://types/droppable.gd" id="11_al4dr"]
[ext_resource type="Script" path="res://test/card_stack_ui/HierarchyPile.gd" id="12_4fdiq"]
[ext_resource type="Script" path="res://types/hierarchical_card_stack_ui.gd" id="13_wpjg6"]
[ext_resource type="Script" path="res://test/card_stack_ui/DebugUI.gd" id="14_t3xyq"]
[ext_resource type="PackedScene" uid="uid://nhc2no6rgyca" path="res://scenes/ace_pile.tscn" id="15_jx6a1"]

[node name="TestCardUI" type="Node2D"]
script = ExtResource("1_nmuyj")
metadata/_edit_lock_ = true

[node name="DebugUI" type="CanvasLayer" parent="."]
visible = false
script = ExtResource("14_t3xyq")

[node name="VBoxContainer" type="VBoxContainer" parent="DebugUI"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
alignment = 2

[node name="HBoxContainer" type="HBoxContainer" parent="DebugUI/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="NewDeckButton" type="Button" parent="DebugUI/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "NEW DECK"

[node name="AcePile1" parent="." instance=ExtResource("15_jx6a1")]
position = Vector2(250, 100)
metadata/_edit_lock_ = true

[node name="AcePile2" parent="." instance=ExtResource("15_jx6a1")]
position = Vector2(400, 100)
metadata/_edit_lock_ = true

[node name="AcePile3" parent="." instance=ExtResource("15_jx6a1")]
position = Vector2(550, 100)
metadata/_edit_lock_ = true

[node name="AcePile4" parent="." instance=ExtResource("15_jx6a1")]
position = Vector2(700, 100)
metadata/_edit_lock_ = true

[node name="Dealer" type="Node2D" parent="." node_paths=PackedStringArray("deck", "stack", "clickable")]
position = Vector2(50, 200)
script = ExtResource("1_4jtvl")
deck = NodePath("DeckPile/FullCardStackUI")
stack = NodePath("EndPile/CardStackUI")
clickable = NodePath("DeckPile/Clickable")
metadata/_edit_lock_ = true

[node name="DeckPile" type="Node2D" parent="Dealer"]
unique_name_in_owner = true
position = Vector2(50, 70)
metadata/_edit_lock_ = true

[node name="EmptySpot" type="Node2D" parent="Dealer/DeckPile"]
script = ExtResource("2_yifio")
type = 6
metadata/_edit_lock_ = true

[node name="FullCardStackUI" type="Node2D" parent="Dealer/DeckPile"]
script = ExtResource("3_xugq4")
metadata/_edit_lock_ = true

[node name="Clickable" type="Area2D" parent="Dealer/DeckPile"]
script = ExtResource("4_klxqk")
metadata/_edit_lock_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="Dealer/DeckPile/Clickable"]
shape = ExtResource("5_7tjoe")
metadata/_edit_lock_ = true

[node name="CardCounter" type="Node2D" parent="Dealer/DeckPile"]
script = ExtResource("6_mtdof")
metadata/_edit_lock_ = true

[node name="EndPile" type="Node2D" parent="Dealer"]
unique_name_in_owner = true
position = Vector2(200, 70)
script = ExtResource("7_l8xok")
metadata/_edit_lock_ = true

[node name="EmptySpot" type="Node2D" parent="Dealer/EndPile"]
script = ExtResource("2_yifio")
type = 7
metadata/_edit_lock_ = true

[node name="CardStackUI" type="Node2D" parent="Dealer/EndPile"]
script = ExtResource("8_ep2f1")
open = true
metadata/_edit_lock_ = true

[node name="CardCounter" type="Node2D" parent="Dealer/EndPile"]
script = ExtResource("6_mtdof")
metadata/_edit_lock_ = true

[node name="BuildPile1" parent="." node_paths=PackedStringArray("source_deck") instance=ExtResource("9_ovmvl")]
position = Vector2(400, 270)
source_deck = NodePath("../Dealer/DeckPile/FullCardStackUI")

[node name="BuildPile2" parent="." node_paths=PackedStringArray("source_deck") instance=ExtResource("9_ovmvl")]
position = Vector2(550, 270)
source_deck = NodePath("../Dealer/DeckPile/FullCardStackUI")

[node name="BuildPile3" parent="." node_paths=PackedStringArray("source_deck") instance=ExtResource("9_ovmvl")]
position = Vector2(700, 270)
source_deck = NodePath("../Dealer/DeckPile/FullCardStackUI")

[node name="SinkPile" type="Node2D" parent="."]
position = Vector2(250, 450)
script = ExtResource("10_daqt6")
metadata/_edit_lock_ = true

[node name="EmptySpot" type="Node2D" parent="SinkPile"]
script = ExtResource("2_yifio")
type = 2
color = Color(0.890196, 0.00784314, 0.14902, 1)
metadata/_edit_lock_ = true

[node name="Droppable" type="Area2D" parent="SinkPile" node_paths=PackedStringArray("control_node")]
script = ExtResource("11_al4dr")
control_node = NodePath("..")
metadata/_edit_lock_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="SinkPile/Droppable"]
shape = ExtResource("5_7tjoe")
metadata/_edit_lock_ = true

[node name="CardStackUI" type="Node2D" parent="SinkPile"]
script = ExtResource("8_ep2f1")
open = true
metadata/_edit_lock_ = true

[node name="CardCounter" type="Node2D" parent="SinkPile"]
script = ExtResource("6_mtdof")
metadata/_edit_lock_ = true

[node name="HierarchyPile" type="Node2D" parent="."]
visible = false
position = Vector2(400, 2500)
script = ExtResource("12_4fdiq")
metadata/_edit_lock_ = true

[node name="EmptySpot" type="Node2D" parent="HierarchyPile"]
script = ExtResource("2_yifio")
type = 4
color = Color(0.458824, 0.00784314, 0.513726, 1)
metadata/_edit_lock_ = true

[node name="HierarchicalCardStackUI" type="Node2D" parent="HierarchyPile"]
script = ExtResource("13_wpjg6")
open = true
metadata/_edit_lock_ = true

[node name="Droppable" type="Area2D" parent="HierarchyPile" node_paths=PackedStringArray("control_node")]
script = ExtResource("11_al4dr")
control_node = NodePath("..")
metadata/_edit_lock_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="HierarchyPile/Droppable"]
shape = ExtResource("5_7tjoe")
metadata/_edit_lock_ = true

[node name="CardCounter" type="Node2D" parent="HierarchyPile"]
script = ExtResource("6_mtdof")
metadata/_edit_lock_ = true

[node name="HierarchyPile2" type="Node2D" parent="."]
visible = false
position = Vector2(550, 2500)
script = ExtResource("12_4fdiq")
metadata/_edit_lock_ = true

[node name="EmptySpot" type="Node2D" parent="HierarchyPile2"]
script = ExtResource("2_yifio")
type = 4
color = Color(0.458824, 0.00784314, 0.513726, 1)
metadata/_edit_lock_ = true

[node name="HierarchicalCardStackUI" type="Node2D" parent="HierarchyPile2"]
script = ExtResource("13_wpjg6")
open = true
metadata/_edit_lock_ = true

[node name="Droppable" type="Area2D" parent="HierarchyPile2" node_paths=PackedStringArray("control_node")]
script = ExtResource("11_al4dr")
control_node = NodePath("..")
metadata/_edit_lock_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="HierarchyPile2/Droppable"]
shape = ExtResource("5_7tjoe")
metadata/_edit_lock_ = true

[node name="CardCounter" type="Node2D" parent="HierarchyPile2"]
script = ExtResource("6_mtdof")
metadata/_edit_lock_ = true

[connection signal="pressed" from="DebugUI/VBoxContainer/HBoxContainer/NewDeckButton" to="DebugUI" method="_on_new_deck_button_pressed"]
[connection signal="received_drop" from="SinkPile/Droppable" to="SinkPile" method="_on_droppable_received_drop"]
[connection signal="received_drop" from="HierarchyPile/Droppable" to="HierarchyPile" method="_on_droppable_received_drop"]
[connection signal="received_drop" from="HierarchyPile2/Droppable" to="HierarchyPile2" method="_on_droppable_received_drop"]
